# NBA-Fantasy-Points-Prediction

./: .gitignore  README.md  airflow.cfg  fantasy_stats_scraper.py  pyproject.toml
airflow/: airflow.cfg  airflow.db  docker-compose.yml  requirements.txt
airflow/dags/: nba_data_pipeline.py
assets/: app_diagram.excalidraw
config/: model_metadata.yaml
data/: kmeans_labels.parquet
data_pipeline_services/: docker-compose.yml  init.sql  minio_operations.py
data_pipeline_services/airflow/: airflow.cfg
data_pipeline_services/config/: scraping_config.yml  variables.py
data_pipeline_services/config/common/: variables.py
data_pipeline_services/data_ingestion/: .dockerignore  Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt  scraper.py  storage.py  utils.py
data_pipeline_services/data_ingestion/config/: scraping_config.yml
data_pipeline_services/data_ingestion/data/: 2021-22_Season.csv
data_pipeline_services/data_processing/: Dockerfile  cleaning.py  main.py  requirements.txt  validate.py
models/: best_xgboost_model.joblib
notebooks/: EDA.ipynb  Errors_Season(2022-23).csv  NBA_Fantasy_Clustering.ipynb  Season(2022-23).csv  Season(2023-24).csv  clustering.ipynb  data_collection.ipynb  data_engineering.ipynb  data_wrangling.ipynb  model_development.ipynb  predictive_models.ipynb  variables.py
