[tool.poetry]
name = "nba-fantasy-points-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"
jupyter = "^1.0.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
bs4 = "^0.0.2"
requests = "^2.32.3"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
